# fastapi-structuredlog-demo

./: .gitignore  ReadMe.md  pyproject.toml
app/: __init__.py  dependencies.py  logger.py  main.py  middleware.py
tests/: test_logging.py
